--- a/coming soon.html
+++ b/coming soon.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <title>Coming Soon</title>
+    !-- Linking jQuery -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <!-- Linking CSS -->
@@ -11,7 +13,8 @@
     
     <h1>Coming Soon!!!</h1>
 
-   
+ <!-- Linking our JavaScript file -->
+<script type="text/javascript" src="logic.js"></script>  
 </body>
 </html>
 
